@@ -78,6 +78,10 @@ CHANGES WITH 255 in spe:
           simplified 2-message exchange instead of the typical 4-message
           exchange if also supported by the DHCP server.
 
+        * The SendHostname and Hostname options are now available for the
+          DHCPv6 client, independent of the DHCPv4 option, so that these
+          configuration values can be set independently for each client.
+
         Changes in systemd-analyze:
 
         * "systemd-analyze plot" has gained tooltips on each unit name with
